# clipforge

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
clipforge/: __init__.py  cli.py  compose.py  config.py  story.py  subtitles.py  visuals.py  voice.py
examples/: basic_usage.py  batch_generate.py
