[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipforge"
version = "0.1.0"
description = "AI-powered short-form video generator. Create viral YouTube Shorts & TikTok videos with AI-generated visuals, natural voices, and cinematic effects."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "DarkPancakes"}]
requires-python = ">=3.10"
keywords = ["video", "ai", "tts", "shorts", "tiktok", "youtube", "ffmpeg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "edge-tts>=6.1.0",
    "fal-client>=0.4.0",
    "requests>=2.28.0",
    "click>=8.0.0",
]

[project.scripts]
clipforge = "clipforge.cli:main"

[project.urls]
Homepage = "https://github.com/DarkPancakes/clipforge"
Repository = "https://github.com/DarkPancakes/clipforge"
Issues = "https://github.com/DarkPancakes/clipforge/issues"

[tool.setuptools.packages.find]
include = ["clipforge*"]
